src/objects/Time_Log__c.object
<CustomObject>
    <fields>
        <fullName>Ended_At__c</fullName>
        <label>Ended At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <formula>IF(  NOT(ISBLANK(Ended_At__c))  , 

(floor(( Ended_At__c -  Started_At__c  )*24))
+
((((( Ended_At__c -Started_At__c)*24)-floor((Ended_At__c - Started_At__c)*24))*60)/100)

,0
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Started_At__c</fullName>
        <label>Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Entry__c</fullName>
        <label>Time Entry</label>
        <referenceTo>Time_Entry__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>